Moved parts + refactoring
Set listeners etc. + functionality

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".Create">
         </activity>
+        <activity android:name="com.leon.presentation.view.activity.CreateRideActivity"></activity>
     </application>
 
 </manifest>
