Implemented Listeners for Search Activity
refactoring ++

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".Create">
         </activity>
         <activity android:name="com.leon.presentation.view.activity.CreateRideActivity"></activity>
+        <activity android:name="com.leon.presentation.view.activity.SearchRideActivity"></activity>
     </application>
 
 </manifest>
