--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.leon.mitfahren">
+          package="com.ostfalia.mitfahren">
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.leon.presentation.view.activity.SearchRideActivity"
+            android:name="com.ostfalia.presentation.view.activity.SearchRideActivity"
             android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -17,7 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.leon.presentation.view.activity.CreateRideActivity"></activity>
+        <activity android:name="com.ostfalia.presentation.view.activity.CreateRideActivity"></activity>
 
     </application>
 
