--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name="com.ostfalia.presentation.view.activity.SearchRideActivity"
+            android:windowSoftInputMode="stateHidden"
             android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -17,7 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.ostfalia.presentation.view.activity.CreateRideActivity"></activity>
+        <activity
+            android:name="com.ostfalia.presentation.view.activity.CreateRideActivity"
+            android:windowSoftInputMode="stateHidden">
+        </activity>
 
     </application>
 
